the net.

  make_net net_name

The delete_instance command deletes a single instance instead of a list
of instances.

  delete_instance instance

The delete_net command deletes a single net instead of a list
of nets.

  delete_net net

The disconnect_pins command is renamed disconnect_pin and disconnects a
single pin.

  disconnect_pin net pin

Release 1.11.0 2017/08/18
-------------------------

Use the define_corners command to define the names of multiple
process/temperature/voltage corners.

 define_corners corner_name1 [orner_name2]...

The define_corners command must follow set_operating_conditions
-analysis_type precede any reference to the corner names and can only
appear once in a command file. There is no support for re-defining
corners.

For analysis type single each corner has one delay calculation result
and early/late path arrivals. For analysis type best_case/worst_case
and on_chip_varition each corner has min/max delay calculation results
and early/late path arrivals.

Use the report_timing -corner keyword to report timing for one corner.
With no corner keyword report timing reports the corner with the
smallest slack for each timing check.

 report_timing [-corner corner_name]

The following commands do not require the -corner keyword if there
is only one corner. Otherwise, it is required.

 read_liberty [-corner corner_name] [-min] [-max]
 read_parasitics [-min] [-max]
 report_delay_calculation [-corner corner_name]
 set_annotated_transition [-corner corner_name]
 set_annotated_delay [-corner corner_name]
 set_annotated_check [-corner corner_name]
 read_sdf [-corner corner_name]
 write_sdf [-corner corner_name]

An example command script using multiple corners is shown below.

  read_liberty liberty1.lib
  read_verilog reg1.v
  link_design top
  define_corners ff ss
  read_sdf -corner ff reg1.sdf
  read_sdf -corner ss reg1_ss.sdf
  create_clock -name clk -period 10 {clk1 clk2 clk3}
  set_input_delay -clock clk 0 {in1 in2}